[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/resources/nokiaTileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/resources/nokiaOutdoorTileset.tres" type="TileSet" id=3]
[ext_resource path="res://src/other/car/Car.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/resources/nokiaTheme.tres" type="Theme" id=5]
[ext_resource path="res://src/zombie/Zombie.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/other/fuel/Fuel.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/other/tutorial/Tutorial.gd" type="Script" id=8]
[ext_resource path="res://src/other/ammoPack/AmmoPack.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/other/healthPack/HealthPack.tscn" type="PackedScene" id=10]

[node name="Tutorial" type="Node2D"]
script = ExtResource( 8 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -720896, 1, 3, -720895, 1, 4, -720894, 1, 4, -720893, 1, 4, -720892, 1, 131076, -720891, 1, 131076, -720890, 1, 4, -720889, 1, 131076, -720888, 1, 4, -720887, 1, 4, -720886, 1, 131076, -720885, 1, 4, -720884, 1, 131076, -720883, 1, 4, -720882, 1, 131076, -720881, 1, 4, -720880, 1, 4, -720879, 1, 4, -720878, 1, 4, -720877, 1, 131076, -720876, 1, 4, -720875, 1, 4, -720874, 1, 4, -720873, 1, 4, -720872, 1, 4, -720871, 1, 4, -720870, 1, 4, -720869, 1, 131076, -720868, 1, 131076, -720867, 1, 4, -720866, 1, 131076, -720865, 1, 4, -720864, 1, 131076, -720863, 1, 131076, -720862, 1, 4, -720861, 1, 4, -720860, 1, 5, -655360, 1, 65541, -655324, 1, 65539, -589824, 1, 65539, -589788, 1, 65541, -524288, 1, 65541, -524252, 1, 65539, -458752, 1, 393217, -458716, 1, 65539, -393180, 1, 65541, -327668, 1, 3, -327667, 1, 4, -327666, 1, 4, -327665, 1, 4, -327664, 1, 131076, -327663, 1, 131076, -327662, 1, 4, -327661, 1, 131076, -327660, 1, 131076, -327659, 1, 4, -327658, 1, 131076, -327657, 1, 131076, -327656, 1, 131076, -327655, 1, 262145, -327654, 1, 4, -327653, 1, 327683, -327651, 1, 262144, -327650, 1, 4, -327649, 1, 5, -327644, 1, 65541, -262132, 1, 65541, -262119, 1, 65539, -262113, 1, 65541, -262108, 1, 65539, -196603, 1, 0, -196602, 1, 2, -196596, 1, 65539, -196583, 1, 327681, -196582, 1, 131076, -196581, 1, 327683, -196577, 1, 65539, -196572, 1, 65541, -131067, 1, 131072, -131066, 1, 131074, -131060, 1, 65541, -131058, 1, 196610, -131053, 1, 196610, -131050, 1, 196610, -131047, 1, 65539, -131041, 1, 65539, -131036, 1, 65539, -65524, 1, 65539, -65522, 1, 65541, -65517, 1, 65541, -65514, 1, 65541, -65511, 1, 65541, -65505, 1, 65539, -65500, 1, 65539, 12, 1, 65541, 14, 1, 393217, 19, 1, 393217, 22, 1, 393217, 25, 1, 327681, 26, 1, 4, 27, 1, 327683, 31, 1, 65539, 36, 1, 65541, 65548, 1, 393217, 65561, 1, 65539, 65567, 1, 65539, 65572, 1, 65539, 131097, 1, 65539, 131103, 1, 65541, 131108, 1, 65539, 196613, 1, 0, 196614, 1, 2, 196627, 1, 196610, 196630, 1, 196610, 196633, 1, 327681, 196634, 1, 131076, 196635, 1, 327683, 196639, 1, 65539, 196644, 1, 65539, 262149, 1, 131072, 262150, 1, 131074, 262156, 1, 196610, 262163, 1, 65541, 262166, 1, 65541, 262169, 1, 65539, 262175, 1, 65541, 262180, 1, 65541, 327692, 1, 65541, 327699, 1, 393217, 327702, 1, 393217, 327705, 1, 65539, 327711, 1, 65539, 327716, 1, 65539, 393228, 1, 65539, 393241, 1, 327681, 393242, 1, 4, 393243, 1, 327683, 393247, 1, 65539, 393252, 1, 65539, 458764, 1, 65539, 458777, 1, 65539, 458783, 1, 65539, 458788, 1, 65539, 524300, 1, 131075, 524301, 1, 131076, 524302, 1, 131076, 524303, 1, 131076, 524304, 1, 4, 524305, 1, 131076, 524306, 1, 131076, 524307, 1, 262145, 524308, 1, 327683, 524310, 1, 262144, 524311, 1, 131076, 524312, 1, 4, 524313, 1, 327682, 524314, 1, 4, 524315, 1, 262145, 524316, 1, 131076, 524317, 1, 4, 524318, 1, 4, 524319, 1, 131077, 524324, 1, 65541, 589829, 1, 0, 589830, 1, 2, 589843, 1, 65539, 589851, 1, 65539, 589860, 1, 65541, 655365, 1, 131072, 655366, 1, 131074, 655379, 1, 65539, 655385, 1, 65543, 655387, 1, 65539, 655396, 1, 65539, 720915, 1, 65539, 720917, 1, 65543, 720923, 1, 65539, 720932, 1, 65539, 786451, 1, 65539, 786457, 1, 65543, 786459, 1, 65541, 786468, 1, 65539, 851987, 1, 65539, 851989, 1, 65543, 851991, 1, 65543, 851995, 1, 65541, 852004, 1, 65539, 917504, 1, 196610, 917523, 1, 65539, 917531, 1, 65541, 917540, 1, 65539, 983040, 1, 65541, 983059, 1, 131075, 983060, 1, 131076, 983061, 1, 131076, 983062, 1, 131076, 983063, 1, 4, 983064, 1, 131076, 983065, 1, 131076, 983066, 1, 4, 983067, 1, 131077, 983076, 1, 65539, 1048576, 1, 65541, 1048612, 1, 65539, 1114112, 1, 65541, 1114148, 1, 65539, 1179648, 1, 131075, 1179649, 1, 4, 1179650, 1, 131076, 1179651, 1, 4, 1179652, 1, 131076, 1179653, 1, 131076, 1179654, 1, 4, 1179655, 1, 131076, 1179656, 1, 131076, 1179657, 1, 131076, 1179658, 1, 131076, 1179659, 1, 131076, 1179660, 1, 4, 1179661, 1, 4, 1179662, 1, 4, 1179663, 1, 131076, 1179664, 1, 131076, 1179665, 1, 131076, 1179666, 1, 4, 1179667, 1, 4, 1179668, 1, 4, 1179669, 1, 131076, 1179670, 1, 4, 1179671, 1, 4, 1179672, 1, 4, 1179673, 1, 4, 1179674, 1, 131076, 1179675, 1, 131076, 1179676, 1, 4, 1179677, 1, 131076, 1179678, 1, 131076, 1179679, 1, 4, 1179680, 1, 4, 1179681, 1, 131076, 1179682, 1, 131076, 1179683, 1, 4, 1179684, 1, 131077 )

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -1114076, 8, 0, -1048569, 4, 0, -1048554, 9, 0, -917518, 4, 0, -851971, 4, 0, -917491, 4, 0, -851935, 8, 0, -786390, 9, 0, -589833, 2, 0, -655340, 14, 0, -655333, 13, 0, -589813, 7, 0, -458755, 2, 0, -524287, 7, 0, -524281, 10, 0, -524263, 7, 0, -524257, 14, 0, -393232, 7, 0, -393225, 4, 0, -458744, 14, 0, -458739, 4, 0, -458735, 13, 0, -393178, 8, 0, -262157, 1, 0, -196609, 7, 0, -262141, 11, 0, -131079, 0, 0, -65541, 1, 0, -131029, 8, 0, -12, 14, 0, 10, 4, 0, 34, 14, 0, 131064, 14, 0, 196591, 1, 0, 131080, 10, 0, 196647, 8, 0, 327667, 2, 0, 262178, 10, 0, 393208, 12, 0, 327688, 10, 0, 327723, 8, 0, 458741, 2, 0, 524271, 0, 0, 524321, 14, 0, 589864, 8, 0, 720883, 14, 0, 720888, 0, 0, 720896, 12, 0, 720904, 14, 0, 851964, 12, 0, 851971, 7, 0, 851980, 14, 0, 852000, 10, 0, 983027, 7, 0, 983033, 7, 0, 917521, 10, 0, 983052, 5, 0, 983073, 5, 0, 1048581, 14, 0, 1048618, 8, 0, 1376243, 7, 0, 1376251, 14, 0, 1310723, 2, 0, 1310765, 8, 0, 1376269, 2, 0, 1441808, 8, 0, 1441816, 2, 0, 1441830, 8, 0, 1507328, 8, 0, 1507357, 8, 0, 1703927, 8, 0, 1638408, 8, 0, 1638419, 8, 0, 1703972, 8, 0, 1769475, 8, 0, 1835025, 8, 0, 1835033, 8, 0, 1900551, 8, 0, 1900561, 8, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -36, 25 )

[node name="Car" parent="." instance=ExtResource( 4 )]
position = Vector2( -61.9786, 32 )

[node name="InvisibleWall" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InvisibleWall"]
polygon = PoolVector2Array( 0, -48, -72, -48, -72, 112, 0, 112, -48, 128, -88, 112, -88, 56, -72, -72 )

[node name="Control" type="Control" parent="."]
margin_left = -28.0
margin_right = 12.0
margin_bottom = 40.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = -76.0
margin_top = -8.0
margin_right = 12.0
margin_bottom = 6.0
text = "Tutorial level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
margin_left = 19.6507
margin_right = 145.651
margin_bottom = 29.0
text = "P-Deploy/Undeploy
turret"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control"]
margin_left = 19.6507
margin_top = 29.0
margin_right = 145.651
margin_bottom = 58.0
text = "O-shoot turret
AD-aim turret"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control"]
visible = false
margin_left = -60.0
margin_top = 8.0
margin_right = 28.0
margin_bottom = 21.0
text = "Tutorial done!"

[node name="Fuel" type="Node" parent="."]

[node name="Fuel" parent="Fuel" instance=ExtResource( 7 )]
position = Vector2( 164, 116 )

[node name="Fuel2" parent="Fuel" instance=ExtResource( 7 )]
position = Vector2( 240, 56 )

[node name="Zombie" parent="." instance=ExtResource( 6 )]
position = Vector2( 168, 32 )

[node name="Zombie2" parent="." instance=ExtResource( 6 )]
position = Vector2( 216, 40 )

[node name="Zombie3" parent="." instance=ExtResource( 6 )]
position = Vector2( 200, 112 )

[node name="Zombie4" parent="." instance=ExtResource( 6 )]
position = Vector2( 136, -64 )

[node name="Zombie5" parent="." instance=ExtResource( 6 )]
position = Vector2( 208, -48 )

[node name="Zombie6" parent="." instance=ExtResource( 6 )]
position = Vector2( 272, 104 )

[node name="AmmoPack" parent="." instance=ExtResource( 9 )]
position = Vector2( 192, 96 )

[node name="AmmoPack2" parent="." instance=ExtResource( 9 )]
position = Vector2( 212, 16 )

[node name="HealthPack" parent="." instance=ExtResource( 10 )]
position = Vector2( 240, -24 )
